HTTP POST to /api/models/dmc-delorean is working (and documented!)
